Refactoring :  슬라이더 하단의 내비게이터 함수 이벤트 위임으로 리팩토링
* 기존에는 ul 내부의 li 하나 하나에 모두 이벤트를 추가해서 로직 상 복잡도가 높았다.
* 이번 리팩토링에서는 이벤트 버블링이 가능한 moseover 이벤트로 바꾸고, li의 상위 노드인 ul에 이벤트를 걸어 이벤트 위임을 구현했다.

--- a/shopping/views/main.ejs
+++ b/shopping/views/main.ejs
@@ -85,9 +85,9 @@
                                     </i>
                                 </span>
                                 <ul>
-                                    <li class="selected"></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li class="selected" data-action="pagingComm" id = "0"></li>
+                                    <li data-action="pagingComm" id = "1"></li>
+                                    <li data-action="pagingComm" id = "2"></li>
                                 </ul>
                             </div>
                         </div>
