캐러셀슬라이드 화살표 hover

--- a/views/index.html
+++ b/views/index.html
@@ -80,13 +80,18 @@
                         <div class="slider_box">
                             <div class="slider">
                                 <div class="carousel_slide"></div>
-                                <div>
+                                <div class="button_box">
                                     <button class="left">
                                         <div class="left_button"></div>
                                     </button>
                                     <button class="right">
                                         <div class="right_button"></div>
                                     </button>
+                                    <div class="carousel_dot_box">
+                                        <span class="carousel_dot"></span>
+                                        <span class="carousel_dot"></span>
+                                        <span class="carousel_dot"></span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -100,8 +105,6 @@
                         <h3>품절주의! 역대급 핫딜</h3>
                     </div>
                     <div class="hot_dael_box">
-                        <ul class="middle_img">
-                        </ul>
                     </div>
                     <div class="plus_img"></div>
                     <div id="middle_mid">
@@ -219,8 +222,9 @@
             </div>
         </div>
     </middle>
-    <script src="../javascripts/button.js"></script>
+    <script src="../javascripts/Carouselbutton.js"></script>
     <script src="../javascripts/main.js"></script>
+    <script src="../javascripts/Carousel_mouseover.js"></script>
 </body>
 
 </html>
