Refactoring : js 클래스 모듈화
* js 파일들을 main.js 파일 하나에 모두 export 해서 ejs 에서는 main.js 하나만 불러오도록 함.

--- a/shopping/views/main.ejs
+++ b/shopping/views/main.ejs
@@ -130,13 +130,8 @@
     </section>
 
 
+    <script type="module" src="/javascripts/main.js"></script>
 
-
-    <script src="/javascripts/header.js"></script>
-    <script src="/javascripts/best.js"></script>
-    <script src="/javascripts/slide.js"></script>
-    <script src="/javascripts/itemList.js"></script>
-    <script src="/javascripts/category.js"></script>
 </body>
 
 </html>
