--- a/views/index.html
+++ b/views/index.html
@@ -99,159 +99,15 @@
 
     <section class="section-bottom">
       <div class="bottom__carousel_wrap">
-        <!-- <div class="bottom__carousel_item">
-          <img
-            class="img-box"
-            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
-            alt=""
-          />
-          <div class="text-wrap">
-            <strong class="img-title">지금은 신품종 전성시대</strong>
-            <span class="img-text">지금은 신품종 전성시대</span>
-            <span class="img-icon"></span>
-          </div>
-        </div>
-        <div class="bottom__carousel_item">
-          <img
-            class="img-box"
-            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
-            alt=""
-          />
-          <div class="text-wrap">
-            <strong class="img-title">지금은 신품종 전성시대</strong>
-            <span class="img-text">지금은 신품종 전성시대</span>
-            <span class="img-icon"></span>
-          </div>
-        </div>
-        <div class="bottom__carousel_item">
-          <img
-            class="img-box"
-            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
-            alt=""
-          />
-          <div class="text-wrap">
-            <strong class="img-title">지금은 신품종 전성시대</strong>
-            <span class="img-text">지금은 신품종 전성시대</span>
-            <span class="img-icon"></span>
-          </div>
-        </div>
-        <div class="bottom__carousel_item">
-          <img
-            class="img-box"
-            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
-            alt=""
-          />
-          <div class="text-wrap">
-            <strong class="img-title">지금은 신품종 전성시대</strong>
-            <span class="img-text">지금은 신품종 전성시대</span>
-            <span class="img-icon"></span>
-          </div>
-        </div>
-        <div class="bottom__carousel_item">
-          <img
-            class="img-box"
-            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
-            alt=""
-          />
-          <div class="text-wrap">
-            <strong class="img-title">지금은 신품종 전성시대</strong>
-            <span class="img-text">지금은 신품종 전성시대</span>
-            <span class="img-icon"></span>
-          </div>
-        </div>
-        <div class="bottom__carousel_item">
-          <img
-            class="img-box"
-            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
-            alt=""
-          />
-          <div class="text-wrap">
-            <strong class="img-title">지금은 신품종 전성시대</strong>
-            <span class="img-text">지금은 신품종 전성시대</span>
-            <span class="img-icon"></span>
-          </div>
-        </div>
-        <div class="bottom__carousel_item">
-          <img
-            class="img-box"
-            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
-            alt=""
-          />
-          <div class="text-wrap">
-            <strong class="img-title">지금은 신품종 전성시대</strong>
-            <span class="img-text">지금은 신품종 전성시대</span>
-            <span class="img-icon"></span>
-          </div>
-        </div>
-        <div class="bottom__carousel_item">
-          <img
-            class="img-box"
-            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
-            alt=""
-          />
-          <div class="text-wrap">
-            <strong class="img-title">지금은 신품종 전성시대</strong>
-            <span class="img-text">지금은 신품종 전성시대</span>
-            <span class="img-icon"></span>
-          </div>
-        </div>
-        <div class="bottom__carousel_item">
-          <img
-            class="img-box"
-            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
-            alt=""
-          />
-          <div class="text-wrap">
-            <strong class="img-title">지금은 신품종 전성시대</strong>
-            <span class="img-text">지금은 신품종 전성시대</span>
-            <span class="img-icon"></span>
-          </div>
-        </div>
-        <div class="bottom__carousel_item">
-          <img
-            class="img-box"
-            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
-            alt=""
-          />
-          <div class="text-wrap">
-            <strong class="img-title">지금은 신품종 전성시대</strong>
-            <span class="img-text">지금은 신품종 전성시대</span>
-            <span class="img-icon"></span>
-          </div>
-        </div>
-        <div class="bottom__carousel_item">
-          <img
-            class="img-box"
-            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
-            alt=""
-          />
-          <div class="text-wrap">
-            <strong class="img-title">지금은 신품종 전성시대</strong>
-            <span class="img-text">지금은 신품종 전성시대</span>
-            <span class="img-icon"></span>
-          </div>
-        </div>
-        <div class="bottom__carousel_item">
-          <img
-            class="img-box"
-            src="http://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FH11353503109.jpg%3Fut%3D20201130095857&scode=talkgift"
-            alt=""
-          />
-          <div class="text-wrap">
-            <strong class="img-title">지금은 신품종 전성시대</strong>
-            <span class="img-text">지금은 신품종 전성시대</span>
-            <span class="img-icon"></span>
-          </div>
-        </div> -->
-
-        <div class="b_item__carousel-icon">
-          <button class="b_paging-btn" id="b_paging-btn-prev">
-            <span id="prev"></span>
-          </button>
-          <button class="b_paging-btn" id="b_paging-btn-next">
-            <span id="next"></span>
-          </button>
-        </div>
+        <!-- 하단 캐러셀 -->
+      </div>
+      <div class="b_item__carousel-icon">
+        <button class="b_paging-btn" id="b_paging-btn-prev">
+          <span id="prev"></span>
+        </button>
+        <button class="b_paging-btn" id="b_paging-btn-next">
+          <span id="next"></span>
+        </button>
       </div>
     </section>
 
