자동 슬라이드 코드 수정
2.5초마다 오른쪽으로 부드럽게 자동으로 움직이게 수정하였다

--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -319,10 +319,12 @@ body {
         }
 
         .main-theme-category-lists {
+            left: -77.5rem;
             padding: 0 1.5rem;
             display: flex;
             transform: translate3d(0,0,0);
             transition: transform 0.7s linear;
+            position: relative;
         }
 
         .main-theme-category-list {
