--- a/shopping/public/stylesheets/main.scss
+++ b/shopping/public/stylesheets/main.scss
@@ -185,14 +185,6 @@ input {
     padding: 0 10px;
 }
 
-
-
-
-
-
-
-
-
 .main {
     display: flex;
     flex-direction: column;
@@ -206,10 +198,8 @@ input {
         width: 64%;
         background: #fff;
         margin: 20px;
-        
     }
 }
-
 
 .big_contents {
     display: flex;
@@ -218,28 +208,22 @@ input {
     align-items: center;
     border: 1px solid $main_gray;
 
-
     .big_contents_wrapper {
-        display:flex;
+        display: flex;
         justify-content: center;
         align-items: center;
         margin-left: 13%;
 
-
         .best {
             padding: 28px 0;
-           
         }
     }
-
 }
-
 
 .small_contents {
     display: flex;
     flex-direction: column;
-    width:100%;
-    
+    width: 100%;
 
     .item_list {
         display: flex;
@@ -248,13 +232,12 @@ input {
         text-align: center;
         padding: 0;
 
-
         li {
             .item_list_img {
                 width: $item_list_size;
                 height: $item_list_size;
 
-                display:inline-block;
+                display: inline-block;
             }
 
             span {
@@ -267,11 +250,23 @@ input {
 }
 
 .item_wrapper {
-    padding: 12px 18px;   
+    padding: 12px 18px;
     border-right: 1px solid $main_gray;
     border-top: 1px solid $main_gray;
-}
 
+    .item_list_img {
+        width: $item_list_size;
+        height: $item_list_size;
+
+        display: inline-block;
+    }
+
+    span {
+        display: block;
+        padding: 2px 0;
+        text-align: left;
+    }
+}
 
 .img_title {
     font-size: 14px;
@@ -282,7 +277,6 @@ input {
     font-size: 12px;
     color: #8888;
 }
-
 
 .container {
     width: 50%;
@@ -301,8 +295,7 @@ input {
     height: 100%;
     display: flex;
     width: 300%;
-    transition: all 0.3s;
-    
+    transition: transform 0.3s;
 
     section {
         flex-basis: 100%;
@@ -331,9 +324,6 @@ input {
     right: 5px;
 }
 
-
-
-
 .controls ul {
     position: absolute;
     bottom: 20px;
@@ -349,7 +339,6 @@ input {
         height: 5px;
         margin: 1px;
         background: rgb(200, 200, 200);
-        
     }
 
     .selected {
@@ -362,4 +351,56 @@ input {
     height: 80px;
     background: $main_gray;
     cursor: pointer;
+}
+
+.sub_main {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: $bg_color;
+
+    .sub_main_wrapper {
+        display: flex;
+        flex-direction: column;
+        width: 64%;
+        background: #ffffff;
+
+        .category_title > span {
+            text-align: left;
+            font-size: 20px;
+            font-weight: bold;
+            background: #ffffff;
+        }
+    }
+}
+
+.category.container {
+    width: 100%;
+    background: #f3f3f3;
+
+    .carousel {
+        width: 100%;
+        height: 289px;
+    }
+}
+
+.category.slider {
+    width: 200%;
+    display: flex;
+    background: #ffffff;
+    
+    .item_list {
+        display: flex;
+        flex-direction: row;
+        padding: 0;
+    }
+}
+
+.sub_main .controls {
+    .material-icons {
+        background: $gray_font;
+        color:#f3f3f3;
+        opacity: 70%;
+        font-size: 200%;
+    }
 }
